--- a/adminPanel/templates/adminPanel/teacher_dashboard.html
+++ b/adminPanel/templates/adminPanel/teacher_dashboard.html
@@ -45,7 +45,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto" id="inline-popups">
-                <li class="nav-item active mx-2">
+                <!-- <li class="nav-item active mx-2">
                     <a class="nav-link" href="#">About Us <span
                             class="sr-only">(current)</span></a>
                 </li>
@@ -56,7 +56,7 @@
                 <li class="nav-item active mx-2">
                     <a class="nav-link" data-toggle="modal" data-target="#devModal" href="#">Developers <span
                             class="sr-only">(current)</span></a>
-                </li>
+                </li> -->
                 <li class="nav-item active mx-2 ">
                     <a class="nav-link" href="#test-popup" data-effect="mfp-zoom-in" id="myCreate">Create</a>
                 </li>
@@ -153,6 +153,19 @@
                 <div class="col-sm-12 field">
                     <input type="datetime-local" id="validationStartDate" name="dateTime" placeholder=" " required>
                     <label for="validationStartDate" class="label">Start Date</label>
+                    <div class="invalid-feedback">
+                        Please select a valid Date!
+                    </div>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="col-sm-12 field">
+                    <input type="number" id="validationEndStartDate" name="enddateTime" placeholder=" " required>
+                    <label for="validationEndStartDate" class="label">End in how much Hours</label>
                     <div class="invalid-feedback">
                         Please select a valid Date!
                     </div>
@@ -284,6 +297,12 @@
                                         <p class="card-title mb-0 grayTitle">Time
                                         </p>
                                         <h5 class="mb-0">{{test.dateTime|date:"g:i A"}}</h5>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-12">
+                                        <p class="card-title mb-0 grayTitle">Test ends in</p>
+                                        <h5 class="mb-0">{{test.test_end_hours}} Hours</h5>
                                     </div>
                                 </div> 
                                 <div class="btn-container d-flex justify-content-center p-2 mt-2">
