--- a/adminPanel/templates/adminPanel/teacherdash.html
+++ b/adminPanel/templates/adminPanel/teacherdash.html
@@ -33,7 +33,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto" id="inline-popups">
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="https://kjei.edu.in/kjcoemr/">About Us <span
                             class="sr-only">(current)</span></a>
                 </li>
@@ -44,7 +44,7 @@
                 <li class="nav-item active ml-2">
                     <a class="nav-link" data-toggle="modal" data-target="#devModal" href="#">Developers <span
                             class="sr-only">(current)</span></a>
-                </li>
+                </li> -->
                 <li class="nav-item active ml-2 ">
                     <a class="nav-link" href="#test-popup" data-effect="mfp-zoom-in" id="myCreate">Create</a>
                 </li>
