--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -24,13 +24,13 @@
   <nav class="navbar navbar-expand-lg navbar-light" id="myNavBar">
 
     <!-- Logo -->
-    <a class="navbar-brand" href="#" style="font-family: 'Roboto', sans-serif;">Online Exam</a>
+    <a class="navbar-brand" href="#" style="font-family: 'Roboto', sans-serif;color: #05386B;font-weight: bolder;">Online Exam</a>
 
     <!-- Hamburger Icon With Animation -->
     <button class="navbar-toggler" style="outline: none; border: none;" type="button" data-toggle="collapse"
     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
     aria-label="Toggle navigation">
-      <svg class="ham ham6" viewBox="0 0 100 100" width="60" onclick="this.classList.toggle('active')">
+      <svg class="ham ham6" viewbox="0 0 100 100" width="60" onclick="this.classList.toggle('active')">
         <path class="line top"
           d="m 30,33 h 40 c 13.100415,0 14.380204,31.80258 6.899646,33.421777 -24.612039,5.327373 9.016154,-52.337577 -12.75751,-30.563913 l -28.284272,28.284272" />
         <path class="line middle"
